--- a/Run outside eclipse/Readme
+++ b/Run outside eclipse/Readme
@@ -1,4 +1,4 @@
-Download all the files in this folder.
+Extract the file in this folder.
 
 To run the JAR file either double-click or use the command line.
 
